Fixed spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -341,7 +341,7 @@ a {
     p {
       margin-bottom: 1.25em;
       max-width: 900px;
-      margin: 0;
+      margin: 0 auto;
       letter-spacing: 0.1px;
     }
 
